update after a while 9/12

--- a/notebooks/1_view_data.ipynb
+++ b/notebooks/1_view_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "af1f0e13",
    "metadata": {},
    "outputs": [],
@@ -29,10 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "761f06bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw data from January has shape: (1369769, 19)\n"
+     ]
+    }
+   ],
    "source": [
     "df1 = pd.read_parquet(\"../raw/yellow_tripdata_2021-01.parquet\")\n",
     "print(\"Raw data from January has shape:\", df1.shape)\n"
@@ -121,10 +129,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "565c0e8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(265, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Zone</th>\n",
+       "      <th>service_zone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>Newark Airport</td>\n",
+       "      <td>EWR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>Jamaica Bay</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>Allerton/Pelham Gardens</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Alphabet City</td>\n",
+       "      <td>Yellow Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>Arden Heights</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LocationID        Borough                     Zone service_zone\n",
+       "0           1            EWR           Newark Airport          EWR\n",
+       "1           2         Queens              Jamaica Bay    Boro Zone\n",
+       "2           3          Bronx  Allerton/Pelham Gardens    Boro Zone\n",
+       "3           4      Manhattan            Alphabet City  Yellow Zone\n",
+       "4           5  Staten Island            Arden Heights    Boro Zone"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tzl = pd.read_csv(\"../raw/taxi_zone_lookup.csv\")\n",
     "print(tzl.shape)\n",
@@ -152,6 +248,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e7b0fddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['EWR', 'Queens', 'Bronx', 'Manhattan', 'Staten Island', 'Brooklyn',\n",
+       "       'Unknown', nan], dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tzl['Borough'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af286dc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count                                               264\n",
+       "unique                                              261\n",
+       "top       Governor's Island/Ellis Island/Liberty Island\n",
+       "freq                                                  3\n",
+       "Name: Zone, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tzl['Zone'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "57228977",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count           263\n",
+       "unique            4\n",
+       "top       Boro Zone\n",
+       "freq            205\n",
+       "Name: service_zone, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tzl['service_zone'].describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a02ac4e2",
    "metadata": {},
@@ -161,10 +329,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f4dc91a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['VendorID', 'tpep_pickup_datetime', 'tpep_dropoff_datetime',\n",
+       "       'passenger_count', 'trip_distance', 'RatecodeID', 'store_and_fwd_flag',\n",
+       "       'PULocationID', 'DOLocationID', 'payment_type', 'fare_amount', 'extra',\n",
+       "       'mta_tax', 'tip_amount', 'tolls_amount', 'improvement_surcharge',\n",
+       "       'total_amount', 'congestion_surcharge', 'airport_fee'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df1.columns"
    ]
@@ -233,6 +417,35 @@
    "source": [
     "print(\"The number of non-null values and null values(NA) in column Store and fwd flag is:\")\n",
     "df1['store_and_fwd_flag'].notna().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "01dab48f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1.271417e+06\n",
+       "mean     2.239047e+00\n",
+       "std      7.989435e-01\n",
+       "min     -2.500000e+00\n",
+       "25%      2.500000e+00\n",
+       "50%      2.500000e+00\n",
+       "75%      2.500000e+00\n",
+       "max      3.000000e+00\n",
+       "Name: congestion_surcharge, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['congestion_surcharge'].describe()"
    ]
   }
  ],
