--- a/notebooks/2_normalize_clean.ipynb
+++ b/notebooks/2_normalize_clean.ipynb
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "c18c7f0e",
    "metadata": {},
    "outputs": [
@@ -1722,6 +1722,8 @@
     "    # Take month's name:\n",
     "    month_str = file.name.split('-')[1].split('.')[0]\n",
     "    month_col_name = pd.to_datetime(f'2021-{month_str}-01').strftime('%B') \n",
+    "    month_int = pd.to_datetime(f\"2021-{month_str}-01\").month\n",
+    "\n",
     "    print(f\"--- Processing: {month_col_name}: {file.name} ---\")\n",
     "    df_file = pd.read_parquet(file)\n",
     "    \n",
@@ -1729,7 +1731,7 @@
     "    normalized_file = normalize(df_file)\n",
     "\n",
     "    # Applying QA rules, add QA summary to final QA report:\n",
-    "    file_flag = run_quality_check(normalized_file)\n",
+    "    file_flag = run_quality_check(normalized_file, month_int)\n",
     "    flag_summary = summarize_qa_flags(file_flag)\n",
     "    final_qa_report_df[month_col_name] = flag_summary\n",
     "\n",
