--- a/notebooks/4_advanced.ipynb
+++ b/notebooks/4_advanced.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "99230e52",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "a25eade0",
    "metadata": {},
    "outputs": [],
@@ -55,221 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "adc831bc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MAE</th>\n",
-       "      <th>MAPE</th>\n",
-       "      <th>RMSE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Baseline</th>\n",
-       "      <td>176.363095</td>\n",
-       "      <td>0.113524</td>\n",
-       "      <td>302.546307</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ARIMA</th>\n",
-       "      <td>1322.146715</td>\n",
-       "      <td>3.601659</td>\n",
-       "      <td>1475.926936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Linear Regression</th>\n",
-       "      <td>1336.850919</td>\n",
-       "      <td>4.825480</td>\n",
-       "      <td>1460.990350</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           MAE      MAPE         RMSE\n",
-       "Baseline            176.363095  0.113524   302.546307\n",
-       "ARIMA              1322.146715  3.601659  1475.926936\n",
-       "Linear Regression  1336.850919  4.825480  1460.990350"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df1_forecast_hourly['metrics']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "7d3ff259",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Actual</th>\n",
-       "      <th>Baseline</th>\n",
-       "      <th>ARIMA</th>\n",
-       "      <th>Linear Regression</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>hour</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-01-25 00:00:00</th>\n",
-       "      <td>231</td>\n",
-       "      <td>286</td>\n",
-       "      <td>379.852381</td>\n",
-       "      <td>1997.083617</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-25 01:00:00</th>\n",
-       "      <td>119</td>\n",
-       "      <td>173</td>\n",
-       "      <td>471.706925</td>\n",
-       "      <td>1997.883379</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-25 02:00:00</th>\n",
-       "      <td>67</td>\n",
-       "      <td>83</td>\n",
-       "      <td>557.475946</td>\n",
-       "      <td>1998.683140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-25 03:00:00</th>\n",
-       "      <td>43</td>\n",
-       "      <td>54</td>\n",
-       "      <td>637.562619</td>\n",
-       "      <td>1999.482902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-25 04:00:00</th>\n",
-       "      <td>88</td>\n",
-       "      <td>109</td>\n",
-       "      <td>712.343410</td>\n",
-       "      <td>2000.282663</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-31 19:00:00</th>\n",
-       "      <td>1484</td>\n",
-       "      <td>1347</td>\n",
-       "      <td>1766.280102</td>\n",
-       "      <td>2127.444738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-31 20:00:00</th>\n",
-       "      <td>932</td>\n",
-       "      <td>1148</td>\n",
-       "      <td>1766.281392</td>\n",
-       "      <td>2128.244500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-31 21:00:00</th>\n",
-       "      <td>770</td>\n",
-       "      <td>906</td>\n",
-       "      <td>1766.282597</td>\n",
-       "      <td>2129.044261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-31 22:00:00</th>\n",
-       "      <td>531</td>\n",
-       "      <td>812</td>\n",
-       "      <td>1766.283721</td>\n",
-       "      <td>2129.844023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-31 23:00:00</th>\n",
-       "      <td>344</td>\n",
-       "      <td>533</td>\n",
-       "      <td>1766.284772</td>\n",
-       "      <td>2130.643784</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>168 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     Actual  Baseline        ARIMA  Linear Regression\n",
-       "hour                                                                 \n",
-       "2021-01-25 00:00:00     231       286   379.852381        1997.083617\n",
-       "2021-01-25 01:00:00     119       173   471.706925        1997.883379\n",
-       "2021-01-25 02:00:00      67        83   557.475946        1998.683140\n",
-       "2021-01-25 03:00:00      43        54   637.562619        1999.482902\n",
-       "2021-01-25 04:00:00      88       109   712.343410        2000.282663\n",
-       "...                     ...       ...          ...                ...\n",
-       "2021-01-31 19:00:00    1484      1347  1766.280102        2127.444738\n",
-       "2021-01-31 20:00:00     932      1148  1766.281392        2128.244500\n",
-       "2021-01-31 21:00:00     770       906  1766.282597        2129.044261\n",
-       "2021-01-31 22:00:00     531       812  1766.283721        2129.844023\n",
-       "2021-01-31 23:00:00     344       533  1766.284772        2130.643784\n",
-       "\n",
-       "[168 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df1_forecast_hourly['predictions']"
    ]
@@ -284,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f8c0b669",
    "metadata": {},
    "outputs": [],
@@ -299,186 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "0e23ad15",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MAE</th>\n",
-       "      <th>MAPE</th>\n",
-       "      <th>RMSE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Baseline</th>\n",
-       "      <td>3186.714286</td>\n",
-       "      <td>0.067892</td>\n",
-       "      <td>4380.558167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ARIMA</th>\n",
-       "      <td>9947.501167</td>\n",
-       "      <td>0.221016</td>\n",
-       "      <td>10391.329658</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Linear Regression</th>\n",
-       "      <td>6657.291470</td>\n",
-       "      <td>0.173598</td>\n",
-       "      <td>8934.592359</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           MAE      MAPE          RMSE\n",
-       "Baseline           3186.714286  0.067892   4380.558167\n",
-       "ARIMA              9947.501167  0.221016  10391.329658\n",
-       "Linear Regression  6657.291470  0.173598   8934.592359"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df1_forecast_daily['metrics']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "5a07290c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Actual</th>\n",
-       "      <th>Baseline</th>\n",
-       "      <th>ARIMA</th>\n",
-       "      <th>Linear Regression</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>day</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-01-25</th>\n",
-       "      <td>46338</td>\n",
-       "      <td>36394</td>\n",
-       "      <td>34981.335230</td>\n",
-       "      <td>47102.605072</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-26</th>\n",
-       "      <td>47005</td>\n",
-       "      <td>49962</td>\n",
-       "      <td>39585.881917</td>\n",
-       "      <td>47479.416812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-27</th>\n",
-       "      <td>51595</td>\n",
-       "      <td>48598</td>\n",
-       "      <td>41329.613834</td>\n",
-       "      <td>47856.228551</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-28</th>\n",
-       "      <td>55438</td>\n",
-       "      <td>52365</td>\n",
-       "      <td>41989.961356</td>\n",
-       "      <td>48233.040290</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-29</th>\n",
-       "      <td>53623</td>\n",
-       "      <td>53207</td>\n",
-       "      <td>42240.033541</td>\n",
-       "      <td>48609.852029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-30</th>\n",
-       "      <td>38445</td>\n",
-       "      <td>41290</td>\n",
-       "      <td>42334.735339</td>\n",
-       "      <td>48986.663768</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-01-31</th>\n",
-       "      <td>30500</td>\n",
-       "      <td>30425</td>\n",
-       "      <td>42370.598706</td>\n",
-       "      <td>49363.475507</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Actual  Baseline         ARIMA  Linear Regression\n",
-       "day                                                          \n",
-       "2021-01-25   46338     36394  34981.335230       47102.605072\n",
-       "2021-01-26   47005     49962  39585.881917       47479.416812\n",
-       "2021-01-27   51595     48598  41329.613834       47856.228551\n",
-       "2021-01-28   55438     52365  41989.961356       48233.040290\n",
-       "2021-01-29   53623     53207  42240.033541       48609.852029\n",
-       "2021-01-30   38445     41290  42334.735339       48986.663768\n",
-       "2021-01-31   30500     30425  42370.598706       49363.475507"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df1_forecast_daily['predictions']"
    ]
@@ -493,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "96ad30a6",
    "metadata": {},
    "outputs": [],
@@ -504,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "098bc950",
    "metadata": {},
    "outputs": [],
@@ -516,118 +149,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ecd6efc8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>zone</th>\n",
-       "      <th>time_bin</th>\n",
-       "      <th>duration_p50</th>\n",
-       "      <th>duration_p95</th>\n",
-       "      <th>trips_index_100</th>\n",
-       "      <th>cluster</th>\n",
-       "      <th>cluster_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Allerton/Pelham Gardens</td>\n",
-       "      <td>Early Morning</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>44.00</td>\n",
-       "      <td>0.692021</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low Demand – Smooth Flow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Allerton/Pelham Gardens</td>\n",
-       "      <td>Morning</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>36.80</td>\n",
-       "      <td>1.038032</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low Demand – Smooth Flow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Allerton/Pelham Gardens</td>\n",
-       "      <td>Morning Rush</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>35.00</td>\n",
-       "      <td>5.997518</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Efficient High Volume</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Allerton/Pelham Gardens</td>\n",
-       "      <td>Midday</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>44.15</td>\n",
-       "      <td>15.916489</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low Demand – Smooth Flow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Allerton/Pelham Gardens</td>\n",
-       "      <td>Evening Rush</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>41.40</td>\n",
-       "      <td>3.114096</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Efficient High Volume</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      zone       time_bin  duration_p50  duration_p95  \\\n",
-       "0  Allerton/Pelham Gardens  Early Morning          29.0         44.00   \n",
-       "1  Allerton/Pelham Gardens        Morning          24.0         36.80   \n",
-       "2  Allerton/Pelham Gardens   Morning Rush          14.0         35.00   \n",
-       "3  Allerton/Pelham Gardens         Midday          16.0         44.15   \n",
-       "4  Allerton/Pelham Gardens   Evening Rush          12.0         41.40   \n",
-       "\n",
-       "   trips_index_100  cluster              cluster_name  \n",
-       "0         0.692021        1  Low Demand – Smooth Flow  \n",
-       "1         1.038032        1  Low Demand – Smooth Flow  \n",
-       "2         5.997518        2     Efficient High Volume  \n",
-       "3        15.916489        1  Low Demand – Smooth Flow  \n",
-       "4         3.114096        2     Efficient High Volume  "
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clustered_df[0].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a59c10a3",
+   "metadata": {},
+   "source": [
+    "# Cluster zone 12 months"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8d9c0e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tạo folder nếu thiếu\n",
+    "os.makedirs(\"../processed/cluster_zone\", exist_ok=True)\n",
+    "\n",
+    "# Danh sách tháng từ 01 đến 12\n",
+    "months = [f\"{i:02d}\" for i in range(1, 13)]\n",
+    "\n",
+    "for month in months:\n",
+    "    # Đọc dữ liệu cleaned\n",
+    "    print(f\"Đang xử lý tháng {month}\")\n",
+    "    df_path = f\"../processed/cleaned_data/cleaned_yellow_tripdata_2021-{month}.parquet\"\n",
+    "    df1 = pd.read_parquet(df_path)\n",
+    "    \n",
+    "    # Đọc QA flags\n",
+    "    qa_path = f\"../processed/flags_for_analysis/flag_yellow_tripdata_2021-{month}.parquet\"\n",
+    "    qa_flags = pd.read_parquet(qa_path)\n",
+    "    \n",
+    "    # Thực hiện clustering\n",
+    "    clustered_df, centroids = cluster_zones_with_kpi(df1, qa_flags)\n",
+    "    \n",
+    "    # Lưu kết quả clustering\n",
+    "    output_path = f\"../processed/cluster_zone/clustered_yellow_tripdata_2021-{month}.parquet\"\n",
+    "    clustered_df.to_parquet(output_path)\n",
+    "    \n",
+    "    print(f\"Đã xử lý xong tháng {month}\")"
    ]
   }
  ],
